--- a/else if stats/index.html
+++ b/else if stats/index.html
@@ -13,7 +13,7 @@
         necessitatibus nobis eligendi corrupti dolores hic natus. Id veritatis fugit molestiae error corrupti atque eum
         praesentium facere eligendi sunt accusamus aspernatur, magnam reprehenderit, laborum earum maiores eveniet saepe
         autem ipsa soluta perferendis, sint illo ipsam nobis! Inventore consequuntur porro ad laborum veniam quas dolor?
-        In, deleniti quidem. Assumenda ea ipsam quasi at dolorem doloribus sapiente illo quos modi officia suscipit
+        In, delenitif quidem. Assumenda ea ipsam quasi at dolorem doloribus sapiente illo quos modi officia suscipit
         natus culpa quas, quam tenetur, exercitationem recusandae! Quis est voluptatem fugit deserunt saepe!
     </p>
 </body>
