--- a/Switch_&_Case_Statement/index.html
+++ b/Switch_&_Case_Statement/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos impedit qui omnis obcaecati eveniet numquam tempora
+    eius ipsam perspiciatis ullam provident voluptate deleniti, iure eum fugit necessitatibus accusantium ipsa fugiat
+    ducimus architecto veritatis. Hic illo inventore ullam sit consectetur dolores assumenda reprehenderit sequi
+    pariatur id, eligendi libero voluptatibus, qui quas!</p>
 
 <body>
 
 </body>
 <script src="index.js"></script>
+
 </html>
