--- a/Javascript_Events/index.html
+++ b/Javascript_Events/index.html
@@ -8,13 +8,32 @@
 </head>
 
 <body>
-    <div><a href="#" onClick="alert('Hello World');" onMouseover="this.style.color='green';" onmouseout="this.style.color='blue';">Click Here</a></div>
+    <div><a href="#" onClick="alert('Hello World');" onMouseover="this.style.color='green';"
+            onmouseout="this.style.color='blue';">Click Here</a></div>
     <div></div><input type="button" value="Click Me" onclick="alert('Hey World')"></div>
     <div><a href="#"><img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq9YIuon9JLWwWKtXsyFbcqE_FZeEzsxsyKmJfeDG9WA&s"
-            alt="Puppy" onclick="alert('This is a cute puppy')"></a></div>
-    <!-- <span><h1 onMouseover="alert('Be sure to get your shopping done today.');">World Ends Tomorrow</h1></span> -->
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq9YIuon9JLWwWKtXsyFbcqE_FZeEzsxsyKmJfeDG9WA&s"
+                alt="Puppy" onclick="alert('This is a cute puppy')"></a></div>
+    <span><h1 onMouseover="alert('Be sure to get your shopping done today.');">World Ends Tomorrow</h1></span>
     <p id="loris" onMouseover="expand();">Slow Loris: Mouse over for more info</p>
+    <br>
+    <input type="text" size="30" onFocus="makeFieldYellow();" onBlur="makeFieldWhite();">
+    <br>
+    <input type="text" size="30" onFocus="this.style.backgroundColor='yellow';"
+        onBlur="this.style.backgroundColor='white';">
+
+        <!-- Form  -->
+
+
+    <form onsubmit="checkAddress('email');">
+    <label for="Email">Enter Email Here:
+    </label>
+    <input type="email" name="" id="email"><br>
+    <input type="submit" value="submit">
+    </form>
+
+<!-- javascript link -->
+
     <script src="app.js"></script>
 </body>
 
