--- a/JS_Events/index.html
+++ b/JS_Events/index.html
@@ -9,9 +9,9 @@
 <body>
     <div>
         <form onSubmit="checkEmail('email')">
-            <label for="Email">Email :</label>
-            <input type="text" id="email">
-            <input type="submit" value="submit">
+            <label for="Email" class="form">Email :</label><br>
+            <input type="text" id="email" ><br><br>
+            <input type="submit" value="submit" id="button" >
         </form>
     </div>
     <script src="app.js"></script>
