--- a/setting field values/index.html
+++ b/setting field values/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- <title>Document</title>
 </head>
 
 <body>
@@ -17,4 +17,11 @@
     <script src="app.js"></script>
 </body>
 
+</html> -->
+
+<title>Write a JavaScript function to convert an amount to coins.</title>
+</head>
+<body>
+  
+</body>
 </html>
