--- a/Images_JS/index.html
+++ b/Images_JS/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="yellowrose"><img src="https://i.imgur.com/ppfhZa6.jpg" style="visibility:hidden"></div>
+    <!-- <div id="yellowrose"><img src="https://i.imgur.com/ppfhZa6.jpg" style="visibility:hidden"></div>
     <button id="showmore">Show More</button>
     <div id="content">
     </div>
+    <script src="app.js"></script> -->
+
+    <img src="https://media.istockphoto.com/id/184944186/photo/quaid-e-azam.jpg?s=612x612&w=0&k=20&c=7mRHDKfBWbpmiTto_w_oMm4EeboU9tEDO_JXke01P5I=" id="before" onclick="swapPic();">
     <script src="app.js"></script>
 </body>
 </html>
