--- a/Calculator_JS/index.html
+++ b/Calculator_JS/index.html
@@ -16,8 +16,8 @@
             <input readonly type="text" name="" id="fld">
         </div>
         <div class="div_margin">
-            <button onclick="clr()">Clear All</button>
-            <button onclick="singleClr()" class="clr_div">Clear</button>
+            <button onclick="clr()" class="specialBtns">Clear All</button>
+            <button onclick="singleClr()" class="clr_div specialBtns">Clear</button>
             <button id="" onclick="clck('/')" class="clr_div">/</button>
         </div>
         <div class="div_margin">
