--- a/LocalStorage/welcome.html
+++ b/LocalStorage/welcome.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome <script>document.write(localStorage.getItem('Email'))</script></h1>
+    <button onclick="logout()">Log Out</button>
     <script src="app.js"></script>
 </body>
 </html>
